// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Page layout widget update should succeed from a GRAPH widget should update page layout widget to AGGREGATE_CHART configuration 1`] = `
{
  "configuration": {
    "aggregateFieldMetadataId": Any<String>,
    "aggregateOperation": "COUNT",
    "configurationType": "AGGREGATE_CHART",
    "description": "Count of all records",
    "displayDataLabel": true,
    "filter": null,
    "firstDayOfTheWeek": 1,
    "format": "0,0",
    "label": "Total Records",
    "prefix": null,
    "suffix": null,
    "timezone": "UTC",
  },
  "createdAt": Any<String>,
  "deletedAt": null,
  "gridPosition": {
    "column": 0,
    "columnSpan": 1,
    "row": 0,
    "rowSpan": 1,
  },
  "id": Any<String>,
  "objectMetadataId": Any<String>,
  "pageLayoutTabId": Any<String>,
  "title": "Original Graph Widget",
  "type": "GRAPH",
  "updatedAt": Any<String>,
}
`;

exports[`Page layout widget update should succeed from a GRAPH widget should update page layout widget to GAUGE_CHART configuration 1`] = `
{
  "configuration": {
    "aggregateFieldMetadataId": Any<String>,
    "aggregateOperation": "SUM",
    "color": null,
    "configurationType": "GAUGE_CHART",
    "description": "Completion percentage",
    "displayDataLabel": true,
    "filter": null,
    "firstDayOfTheWeek": 1,
    "timezone": "UTC",
  },
  "createdAt": Any<String>,
  "deletedAt": null,
  "gridPosition": {
    "column": 0,
    "columnSpan": 1,
    "row": 0,
    "rowSpan": 1,
  },
  "id": Any<String>,
  "objectMetadataId": Any<String>,
  "pageLayoutTabId": Any<String>,
  "title": "Original Graph Widget",
  "type": "GRAPH",
  "updatedAt": Any<String>,
}
`;

exports[`Page layout widget update should succeed from a GRAPH widget should update page layout widget to HORIZONTAL BAR_CHART configuration 1`] = `
{
  "configuration": {
    "aggregateFieldMetadataId": Any<String>,
    "aggregateOperation": "SUM",
    "axisNameDisplay": "NONE",
    "color": "blue",
    "configurationType": "BAR_CHART",
    "description": "Horizontal revenue breakdown",
    "displayDataLabel": true,
    "displayLegend": true,
    "filter": null,
    "firstDayOfTheWeek": 1,
    "groupMode": null,
    "isCumulative": null,
    "layout": "HORIZONTAL",
    "omitNullValues": true,
    "primaryAxisDateGranularity": "DAY",
    "primaryAxisGroupByFieldMetadataId": Any<String>,
    "primaryAxisGroupBySubFieldName": null,
    "primaryAxisManualSortOrder": null,
    "primaryAxisOrderBy": "FIELD_ASC",
    "rangeMax": 100000,
    "rangeMin": 0,
    "secondaryAxisGroupByDateGranularity": "DAY",
    "secondaryAxisGroupByFieldMetadataId": null,
    "secondaryAxisGroupBySubFieldName": null,
    "secondaryAxisManualSortOrder": null,
    "secondaryAxisOrderBy": null,
    "timezone": "UTC",
  },
  "createdAt": Any<String>,
  "deletedAt": null,
  "gridPosition": {
    "column": 0,
    "columnSpan": 1,
    "row": 0,
    "rowSpan": 1,
  },
  "id": Any<String>,
  "objectMetadataId": Any<String>,
  "pageLayoutTabId": Any<String>,
  "title": "Original Graph Widget",
  "type": "GRAPH",
  "updatedAt": Any<String>,
}
`;

exports[`Page layout widget update should succeed from a GRAPH widget should update page layout widget to LINE_CHART configuration 1`] = `
{
  "configuration": {
    "aggregateFieldMetadataId": Any<String>,
    "aggregateOperation": "AVG",
    "axisNameDisplay": "NONE",
    "color": "cyan",
    "configurationType": "LINE_CHART",
    "description": "Trend over time",
    "displayDataLabel": true,
    "displayLegend": true,
    "filter": null,
    "firstDayOfTheWeek": 1,
    "isCumulative": null,
    "isStacked": null,
    "omitNullValues": false,
    "primaryAxisDateGranularity": "DAY",
    "primaryAxisGroupByFieldMetadataId": Any<String>,
    "primaryAxisGroupBySubFieldName": null,
    "primaryAxisManualSortOrder": null,
    "primaryAxisOrderBy": "FIELD_ASC",
    "rangeMax": 100,
    "rangeMin": -100,
    "secondaryAxisGroupByDateGranularity": "DAY",
    "secondaryAxisGroupByFieldMetadataId": Any<String>,
    "secondaryAxisGroupBySubFieldName": "primaryLinkUrl",
    "secondaryAxisManualSortOrder": null,
    "secondaryAxisOrderBy": "FIELD_DESC",
    "timezone": "UTC",
  },
  "createdAt": Any<String>,
  "deletedAt": null,
  "gridPosition": {
    "column": 0,
    "columnSpan": 1,
    "row": 0,
    "rowSpan": 1,
  },
  "id": Any<String>,
  "objectMetadataId": Any<String>,
  "pageLayoutTabId": Any<String>,
  "title": "Original Graph Widget",
  "type": "GRAPH",
  "updatedAt": Any<String>,
}
`;

exports[`Page layout widget update should succeed from a GRAPH widget should update page layout widget to PIE_CHART configuration 1`] = `
{
  "configuration": {
    "aggregateFieldMetadataId": Any<String>,
    "aggregateOperation": "SUM",
    "color": "yellow",
    "configurationType": "PIE_CHART",
    "dateGranularity": "DAY",
    "description": "Distribution by category",
    "displayDataLabel": true,
    "displayLegend": true,
    "filter": null,
    "firstDayOfTheWeek": 1,
    "groupByFieldMetadataId": Any<String>,
    "groupBySubFieldName": null,
    "manualSortOrder": null,
    "orderBy": "VALUE_DESC",
    "showCenterMetric": true,
    "timezone": "UTC",
  },
  "createdAt": Any<String>,
  "deletedAt": null,
  "gridPosition": {
    "column": 0,
    "columnSpan": 1,
    "row": 0,
    "rowSpan": 1,
  },
  "id": Any<String>,
  "objectMetadataId": Any<String>,
  "pageLayoutTabId": Any<String>,
  "title": "Original Graph Widget",
  "type": "GRAPH",
  "updatedAt": Any<String>,
}
`;

exports[`Page layout widget update should succeed from a GRAPH widget should update page layout widget to VERTICAL BAR_CHART configuration 1`] = `
{
  "configuration": {
    "aggregateFieldMetadataId": Any<String>,
    "aggregateOperation": "SUM",
    "axisNameDisplay": "NONE",
    "color": "red",
    "configurationType": "BAR_CHART",
    "description": "Monthly revenue breakdown",
    "displayDataLabel": true,
    "displayLegend": true,
    "filter": null,
    "firstDayOfTheWeek": 1,
    "groupMode": null,
    "isCumulative": null,
    "layout": "VERTICAL",
    "omitNullValues": true,
    "primaryAxisDateGranularity": "DAY",
    "primaryAxisGroupByFieldMetadataId": Any<String>,
    "primaryAxisGroupBySubFieldName": null,
    "primaryAxisManualSortOrder": null,
    "primaryAxisOrderBy": "FIELD_ASC",
    "rangeMax": 100000,
    "rangeMin": 0,
    "secondaryAxisGroupByDateGranularity": "DAY",
    "secondaryAxisGroupByFieldMetadataId": null,
    "secondaryAxisGroupBySubFieldName": null,
    "secondaryAxisManualSortOrder": null,
    "secondaryAxisOrderBy": null,
    "timezone": "UTC",
  },
  "createdAt": Any<String>,
  "deletedAt": null,
  "gridPosition": {
    "column": 0,
    "columnSpan": 1,
    "row": 0,
    "rowSpan": 1,
  },
  "id": Any<String>,
  "objectMetadataId": Any<String>,
  "pageLayoutTabId": Any<String>,
  "title": "Original Graph Widget",
  "type": "GRAPH",
  "updatedAt": Any<String>,
}
`;

exports[`Page layout widget update should succeed from a STANDALONE_RICH_TEXT widget should update page layout widget to STANDALONE_RICH_TEXT configuration 1`] = `
{
  "configuration": {
    "body": {
      "blocknote": "{"type":"doc","content":[{"type":"paragraph","content":[{"type":"text","text":"Hello world"}]}]}",
      "markdown": "# Hello world",
    },
    "configurationType": "STANDALONE_RICH_TEXT",
  },
  "createdAt": Any<String>,
  "deletedAt": null,
  "gridPosition": {
    "column": 0,
    "columnSpan": 1,
    "row": 0,
    "rowSpan": 1,
  },
  "id": Any<String>,
  "objectMetadataId": null,
  "pageLayoutTabId": Any<String>,
  "title": "Original Rich Text Widget",
  "type": "STANDALONE_RICH_TEXT",
  "updatedAt": Any<String>,
}
`;

exports[`Page layout widget update should succeed from an IFRAME widget should update page layout widget grid position 1`] = `
{
  "configuration": {
    "configurationType": "IFRAME",
    "url": "https://example.com/dashboard",
  },
  "createdAt": Any<String>,
  "deletedAt": null,
  "gridPosition": {
    "column": 3,
    "columnSpan": 4,
    "row": 2,
    "rowSpan": 2,
  },
  "id": Any<String>,
  "objectMetadataId": null,
  "pageLayoutTabId": Any<String>,
  "title": "Original Widget Title",
  "type": "IFRAME",
  "updatedAt": Any<String>,
}
`;

exports[`Page layout widget update should succeed from an IFRAME widget should update page layout widget title 1`] = `
{
  "configuration": {
    "configurationType": "IFRAME",
    "url": "https://example.com/dashboard",
  },
  "createdAt": Any<String>,
  "deletedAt": null,
  "gridPosition": {
    "column": 0,
    "columnSpan": 1,
    "row": 0,
    "rowSpan": 1,
  },
  "id": Any<String>,
  "objectMetadataId": null,
  "pageLayoutTabId": Any<String>,
  "title": "Updated Widget Title",
  "type": "IFRAME",
  "updatedAt": Any<String>,
}
`;

exports[`Page layout widget update should succeed from an IFRAME widget should update page layout widget to IFRAME configuration 1`] = `
{
  "configuration": {
    "configurationType": "IFRAME",
    "url": "https://app.twenty.com/analytics",
  },
  "createdAt": Any<String>,
  "deletedAt": null,
  "gridPosition": {
    "column": 0,
    "columnSpan": 1,
    "row": 0,
    "rowSpan": 1,
  },
  "id": Any<String>,
  "objectMetadataId": null,
  "pageLayoutTabId": Any<String>,
  "title": "Original Widget Title",
  "type": "IFRAME",
  "updatedAt": Any<String>,
}
`;
